fix: change place free unit, change toggle dark mode and add gg font

--- a/src/components/WrapperPage/WrapperPage.scss
+++ b/src/components/WrapperPage/WrapperPage.scss
@@ -1,7 +1,7 @@
 @import '../../share/assets/scss/variables.scss';
 
 .wrapper-page {
-  background-color: $grey-4-color;
+  background-color: inherit;
 }
 .wrapper-page--filter {
   filter: blur(5px);
